# rs-fsrs-python

./: Cargo.toml  README.md  pyproject.toml
src/: lib.rs
tests/: test.py
